// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component 1`] = `"() => create(\\"div\\", {}, \\"Hello World\\");"`;

exports[`component 2`] = `"() => <div>Hello World</div>;"`;

exports[`multiple 1`] = `
"({
  hello
}) => create(Fragment, {}, create(\\"div\\", {}, \\"Foo\\"), create(\\"div\\", {}, \\"Bar\\"));"
`;

exports[`multiple 2`] = `
"({
  hello
}) => <Fragment><div>Foo</div><div>Bar</div></Fragment>;"
`;
